// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`variants default 1`] = `
.emotion-0 {
  display: inline-block;
  padding-left: 0.25rem;
  padding-right: 0.25rem;
  font-size: 0.75rem;
  border-radius: 0.125rem;
  font-weight: 700;
  vertical-align: middle;
  background-color: #EDF2F7;
  color: #1A202C;
  text-transform: uppercase;
  white-space: nowrap;
}

<div>
  <div
    class="emotion-0"
  >
    content
  </div>
</div>
`;

exports[`variants outline variant 1`] = `
.emotion-0 {
  display: inline-block;
  padding-left: 0.25rem;
  padding-right: 0.25rem;
  font-size: 0.75rem;
  border-radius: 0.125rem;
  font-weight: 700;
  vertical-align: middle;
  box-shadow: inset 0 0 0px 1px #718096;
  color: #718096;
  text-transform: uppercase;
  white-space: nowrap;
}

<div>
  <div
    class="emotion-0"
  >
    content
  </div>
</div>
`;

exports[`variants solid variant 1`] = `
.emotion-0 {
  display: inline-block;
  padding-left: 0.25rem;
  padding-right: 0.25rem;
  font-size: 0.75rem;
  border-radius: 0.125rem;
  font-weight: 700;
  vertical-align: middle;
  background-color: #718096;
  color: #fff;
  text-transform: uppercase;
  white-space: nowrap;
}

<div>
  <div
    class="emotion-0"
  >
    content
  </div>
</div>
`;

exports[`variants subtle variant 1`] = `
.emotion-0 {
  display: inline-block;
  padding-left: 0.25rem;
  padding-right: 0.25rem;
  font-size: 0.75rem;
  border-radius: 0.125rem;
  font-weight: 700;
  vertical-align: middle;
  background-color: #EDF2F7;
  color: #1A202C;
  text-transform: uppercase;
  white-space: nowrap;
}

<div>
  <div
    class="emotion-0"
  >
    content
  </div>
</div>
`;

exports[`variants variant color 1`] = `
.emotion-0 {
  display: inline-block;
  padding-left: 0.25rem;
  padding-right: 0.25rem;
  font-size: 0.75rem;
  border-radius: 0.125rem;
  font-weight: 700;
  vertical-align: middle;
  background-color: #c6f6d5;
  color: #22543d;
  text-transform: uppercase;
  white-space: nowrap;
}

<div>
  <div
    class="emotion-0"
  >
    content
  </div>
</div>
`;
